--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@capacitor-community/sqlite",
-  "version": "6.0.0",
+  "name": "sqlite-capacitor6",
+  "version": "6.0.1",
   "description": "Community plugin for native & electron SQLite databases",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -79,7 +79,7 @@
     "typescript": "~4.1.5"
   },
   "peerDependencies": {
-    "@capacitor/core": "^5.0.0"
+    "@capacitor/core": "^6.0.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
